--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "server": "nodemon app.js"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
