Passport & JWT implementationn

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 VUE_APP_API_BASE_URL=http://127.0.0.1:3000/api/
 DB_URL=mongodb://localhost:27017/find-coach
+SECRET_STRING_FOR_TOKEN_GEN=somesecretstringforgeneratingtokens
+MODE=dev
