--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "core-js": "^3.8.3",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
+    "escape-regexp": "^0.0.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.5.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
