--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "escape-regexp": "^0.0.1",
